# foundry-agent-mcp

./: .env.example  .gitignore  README.md  create-agent.py  pyproject.toml  run-agent.py
